--- a/inst/assets/book.scss
+++ b/inst/assets/book.scss
@@ -1,6 +1,6 @@
 /*-- scss:defaults --*/
 
-$primary: #070707 !default;
+$primary: #0087af !default;
 $body-color: #070707 !default;
 
 /*-- scss:rules --*/
@@ -13,6 +13,106 @@ $body-color: #070707 !default;
 
 // Add any custom css styling here... 
 
+span.navbar-title {
+  font-size: 1.5em;
+  text-align: center;
+  }
+
+.quarto-title > h1.title {
+    display: none;
+}
+
+.mt-2.flex-shrink-0.align-items-center {
+        display: none; 
+    }
+
+#title-block-header {
+        display: none; 
+    }
+	
+#refs {
+        display: none; 
+    }
+
+#quarto-header {
+  background-image: url("banner.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#quarto-header a.navbar-brand,
+#quarto-header .navbar-title, 
+#quarto-header .bi.bi-git,
+#quarto-header a.nav-link.dropdown-toggle,
+#quarto-header .bi.bi-twitter,
+#quarto-header .menu-text{
+  color: white;
+}
+
+.navbar-brand-container {
+  margin-right: 0px;
+  margin-left: 7em;
+}
+#nav-menu-bi-git {
+  padding-left: 0px;
+  padding-right: 5px;
+}
+#quarto-header a.nav-link.dropdown-toggle .menu-text {
+  display: none;
+}
+
+.aa-DetachedSearchButtonIcon svg {
+  fill: white;
+}
+.mt-2.flex-shrink-0.align-items-center {
+  display:block;
+}
+
+.quarto-title>h1.title,
+.quarto-title>.title.h1 {
+  display:block;
+}
+main>#title-block-header {
+  display:block;
+  text-align: center; 
+  background-color: #BABABA; 
+  color: #fff;
+  padding: 20px; 
+  border-bottom-style: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: -10px;
+  margin-bottom: 0px;
+}
+main>#title-block-header .title {
+  border-bottom: none; 
+}
+main>header#title-block-header {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+span.quarto-section-identifier {
+  color:#070707;
+  font-weight:normal;
+  margin-right:0;
+}
+
+.title {
+  padding-top: 0px;
+}
+
+
+
+
+h2.anchored {
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+    font-size: 28px;
+    border-color: #0087af ;
+    border-bottom-style: solid;
+    border-bottom-width: 4px;
+}
 
 
 /* ------------------------------------------------------ */
@@ -48,7 +148,7 @@ pre.sourceCode.r, code.sourceCode.r {
     z-index: -1;
     margin: -$border; /* !importanté */
     border-radius: inherit; /* !importanté */
-    background: linear-gradient(to right, #18a603, #0484a9, #0087af);
+    background: #0087af;
   }
 
 }
@@ -81,7 +181,7 @@ div.sidebar-item-container .active, div.sidebar-item-container .show>.nav-link, 
 
 .sidebar-title {
   font-weight: 800;
-  background: linear-gradient(to right, #18a603, #0484a9, #0087af);
+  background: #0087af;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -119,7 +219,7 @@ div.sidebar-item-container .active, div.sidebar-item-container .show>.nav-link, 
 }
 
 .sidebar-menu-container {
-  border: solid #add2dd 1px;
+  border: solid #0087af 2px;
   border-radius: 8px;
   padding: 8px;
   margin-top: 25px;
@@ -133,8 +233,10 @@ div.sidebar-item-container .active, div.sidebar-item-container .show>.nav-link, 
 }
 
 #toc-title+ ul > li > .nav-link {
-  font-weight: 800;
+  font-weight: 1000;
 }
+
+
 
 /* Headings and text styling --------------------------- */
 
@@ -142,7 +244,7 @@ h1 {
   font-size: 36px;
   color: #070707;
   font-weight: 700;
-  border-image: linear-gradient(to right, #18a603, #0484a9, #0087af) 1;
+  border-image: linear-gradient(to right, #0087af, #0087af) 1;
   border-bottom-style: solid;
   border-bottom-width: 4px;
 }
@@ -165,10 +267,11 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5 {
 }
 
 p {
-  margin: 0 0 1rem;
+  margin: 1rem 1rem 1rem 10rem; 
   font-size: 1rem;
   color: #070707;
   line-height: 130%;
+  text-align: justify; 
   display: block;
   margin-block-start: 1em;
   margin-block-end: 1em;
@@ -176,9 +279,11 @@ p {
   margin-inline-end: 0px;
 }
 
+
 .quarto-section-identifier {
   color: #070707;
   font-weight: normal;
+  margin-right : 10rem
 }
 
 ul li::marker {
