--- a/inst/assets/book.scss
+++ b/inst/assets/book.scss
@@ -1,6 +1,6 @@
 /*-- scss:defaults --*/
 
-$primary: #0087af !default;
+$primary: #007562 !default;
 $body-color: #070707 !default;
 
 /*-- scss:rules --*/
@@ -16,7 +16,7 @@ $body-color: #070707 !default;
 span.navbar-title {
   font-size: 1.5em;
   text-align: center;
-  }
+}
 
 .quarto-title > h1.title {
     display: none;
@@ -24,39 +24,68 @@ span.navbar-title {
 
 .mt-2.flex-shrink-0.align-items-center {
         display: none; 
-    }
+}
 
 #title-block-header {
         display: none; 
-    }
+}
 	
 #refs {
         display: none; 
-    }
+}
 
 #quarto-header {
-  background-image: url("banner.png");
-  background-size: cover;
+  background: linear-gradient(139deg, rgba(0,117,98,1) 0%, rgba(249,248,148,1) 95%);
+  background-size: flex;
   background-repeat: no-repeat;
 }
 
 #quarto-header a.navbar-brand,
 #quarto-header .navbar-title, 
 #quarto-header .bi.bi-git,
-#quarto-header a.nav-link.dropdown-toggle,
 #quarto-header .bi.bi-twitter,
-#quarto-header .menu-text{
+#quarto-header a.nav-link{
   color: white;
+}
+
+/* CSS pour ajuster la taille du logo de manière plus précise */
+.navbar-brand-container {
+    display: flex;
+    align-items: center;
+}
+
+.navbar-logo {
+    max-height: 70px; /* Définir une hauteur maximale pour le logo */
+    width: auto; /* Largeur automatique pour maintenir les proportions */
+}
+
+.navbar-nav {
+  display:flex;
+  display:-webkit-flex;
+  flex-direction:column;
+  -webkit-flex-direction:column;
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none;
+  font-size: 1.4em;
+}
+
+nav .nav-item.compact .nav-link {
+  padding-left:.5rem;
+  padding-right:.5rem;
+  font-size:1.4rem
 }
 
 .navbar-brand-container {
   margin-right: 0px;
-  margin-left: 7em;
+  margin-left: 0px;
 }
+
 #nav-menu-bi-git {
   padding-left: 0px;
   padding-right: 5px;
 }
+
 #quarto-header a.nav-link.dropdown-toggle .menu-text {
   display: none;
 }
@@ -64,6 +93,7 @@ span.navbar-title {
 .aa-DetachedSearchButtonIcon svg {
   fill: white;
 }
+
 .mt-2.flex-shrink-0.align-items-center {
   display:block;
 }
@@ -72,10 +102,12 @@ span.navbar-title {
 .quarto-title>.title.h1 {
   display:block;
 }
+
 main>#title-block-header {
   display:block;
   text-align: center; 
-  background-color: #BABABA; 
+  background-color: #659B91; 
+  background-border: #007562;
   color: #fff;
   padding: 20px; 
   border-bottom-style: none;
@@ -83,15 +115,19 @@ main>#title-block-header {
   padding-bottom: 10px;
   margin-top: -10px;
   margin-bottom: 0px;
+  font-family: "Atkinson Hyperlegible", sans-serif;
 }
+
 main>#title-block-header .title {
   border-bottom: none; 
 }
+
 main>header#title-block-header {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 span.quarto-section-identifier {
   color:#070707;
   font-weight:normal;
@@ -102,17 +138,36 @@ span.quarto-section-identifier {
   padding-top: 0px;
 }
 
-
-
-
 h2.anchored {
-    margin-top: 3rem;
-    margin-bottom: 1rem;
-    font-size: 28px;
-    border-color: #0087af ;
-    border-bottom-style: solid;
-    border-bottom-width: 4px;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+  font-size: 28px;
+  border-color: #007562 ;
+  border-bottom-style: solid;
+  border-bottom-width: 4px;
 }
+
+li.dropdown-header > span.menu-text {
+  color: black; /* Définir la couleur du texte en noir */
+}
+
+.navbar>.container-xxl,
+.navbar>.container-xl,
+.navbar>.container-lg,
+.navbar>.container-md,
+.navbar>.container-sm,
+.navbar>.container,
+.navbar>.container-fluid {
+  display:flex;
+  display:-webkit-flex;
+  flex-wrap:inherit;
+  -webkit-flex-wrap:inherit;
+  align-items:center;
+  -webkit-align-items:center;
+  justify-content:space-between;
+  -webkit-justify-content:flex-start;
+}
+
 
 
 /* ------------------------------------------------------ */
@@ -148,7 +203,7 @@ pre.sourceCode.r, code.sourceCode.r {
     z-index: -1;
     margin: -$border; /* !importanté */
     border-radius: inherit; /* !importanté */
-    background: #0087af;
+    background: #007562;
   }
 
 }
@@ -181,7 +236,7 @@ div.sidebar-item-container .active, div.sidebar-item-container .show>.nav-link, 
 
 .sidebar-title {
   font-weight: 800;
-  background: #0087af;
+  background: #007562;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -219,7 +274,7 @@ div.sidebar-item-container .active, div.sidebar-item-container .show>.nav-link, 
 }
 
 .sidebar-menu-container {
-  border: solid #0087af 2px;
+  border: solid #007562 2px;
   border-radius: 8px;
   padding: 8px;
   margin-top: 25px;
@@ -244,7 +299,7 @@ h1 {
   font-size: 36px;
   color: #070707;
   font-weight: 700;
-  border-image: linear-gradient(to right, #0087af, #0087af) 1;
+  border-image: linear-gradient(to right, #007562, #007562) 1;
   border-bottom-style: solid;
   border-bottom-width: 4px;
 }
