Blue layout without the banner figure

--- a/inst/assets/book.scss
+++ b/inst/assets/book.scss
@@ -1,6 +1,6 @@
 /*-- scss:defaults --*/
 
-$primary: #007562 !default;
+$primary: #0087af !default;
 $body-color: #070707 !default;
 
 /*-- scss:rules --*/
@@ -35,7 +35,7 @@ span.navbar-title {
 }
 
 #quarto-header {
-  background: linear-gradient(139deg, rgba(0,117,98,1) 0%, rgba(249,248,148,1) 95%);
+  background: linear-gradient(139deg, rgba(0,135,175,1) 33%, rgba(255,255,255,1) 100%);
   background-size: flex;
   background-repeat: no-repeat;
 }
@@ -107,7 +107,7 @@ main>#title-block-header {
   display:block;
   text-align: center; 
   background-color: #659B91; 
-  background-border: #007562;
+  background-border: #0087af;
   color: #fff;
   padding: 20px; 
   border-bottom-style: none;
@@ -142,7 +142,7 @@ h2.anchored {
   margin-top: 3rem;
   margin-bottom: 1rem;
   font-size: 28px;
-  border-color: #007562 ;
+  border-color: #0087af ;
   border-bottom-style: solid;
   border-bottom-width: 4px;
 }
@@ -203,7 +203,7 @@ pre.sourceCode.r, code.sourceCode.r {
     z-index: -1;
     margin: -$border; /* !importanté */
     border-radius: inherit; /* !importanté */
-    background: #007562;
+    background: #0087af;
   }
 
 }
@@ -236,7 +236,7 @@ div.sidebar-item-container .active, div.sidebar-item-container .show>.nav-link, 
 
 .sidebar-title {
   font-weight: 800;
-  background: #007562;
+  background: #0087af;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -274,7 +274,7 @@ div.sidebar-item-container .active, div.sidebar-item-container .show>.nav-link, 
 }
 
 .sidebar-menu-container {
-  border: solid #007562 2px;
+  border: solid #0087af 2px;
   border-radius: 8px;
   padding: 8px;
   margin-top: 25px;
@@ -299,7 +299,7 @@ h1 {
   font-size: 36px;
   color: #070707;
   font-weight: 700;
-  border-image: linear-gradient(to right, #007562, #007562) 1;
+  border-image: linear-gradient(to right, #0087af, #0087af) 1;
   border-bottom-style: solid;
   border-bottom-width: 4px;
 }
