--- a/inst/assets/book.scss
+++ b/inst/assets/book.scss
@@ -106,7 +106,7 @@ nav .nav-item.compact .nav-link {
 main>#title-block-header {
   display:block;
   text-align: center; 
-  background-color: #659B91; 
+  background-color: #6c757d8f; 
   background-border: #0087af;
   color: #fff;
   padding: 20px; 
