--- a/inst/assets/book.scss
+++ b/inst/assets/book.scss
@@ -235,29 +235,6 @@ li.dropdown-header > span.menu-text {
 
 #workflow {
 
-	// Other styles
-
-	#banner {
-		display: flex;
-		justify-content: center; 
-		align-items: center; 
-		max-width: 70%;
-		max-height: auto;
-		text-align: center; 
-		margin: 0 auto; 
-	}
-
-	#quarto-content{
-	  margin: 0;
-	  padding: 0;
-	  width: 100%;
-	  height: 100%;
-	}
-
-	.cell{
-	  background-color: #e6e6e6;
-	}
-
 	.content{
 	  margin-left: 4rem;
 	  margin-right: -4rem;
@@ -270,45 +247,6 @@ li.dropdown-header > span.menu-text {
 	  margin-top: -3%;
 	}
 
-
-	/* Code chunks */
-
-	p code:not(.sourceCode),
-	li code:not(.sourceCode),
-	td code:not(.sourceCode) {
-	  background-color: #ececec;
-	  padding:.2em
-	}
-
-
-	div.sourceCode {
-	  background-color: #ffffff00;
-	  border: 2px;
-	  border-radius: 8px;
-	  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 10px 10px 0 rgba(0, 0, 0, 0.05), 0 22px 13px 0 rgba(0, 0, 0, 0.03), 0 39px 16px 0 rgba(0, 0, 0, 0.01), 0 61px 17px 0 rgba(0, 0, 0, 0);
-	}
-
-	pre.sourceCode.r, code.sourceCode.r {
-	  
-	  $border: 2px;
-	  color: #070707;
-	  background: #FFF;
-	  background-clip: padding-box; /* !importanté */
-	  border: solid $border transparent; /* !importanté */
-	  border-radius: 8px;
-	  
-	  &:before {
-		content: '';
-		position: absolute;
-		top: 0; right: 0; bottom: 0; left: 0;
-		z-index: -1;
-		margin: -$border; /* !importanté */
-		border-radius: inherit; /* !importanté */
-		background: #007562;
-	  }
-
-	}
-
 	.datatables{
 	  overflow-y: hidden;
 	}
@@ -316,7 +254,6 @@ li.dropdown-header > span.menu-text {
 	strong {
 	  color : #007562
 	}
-
 
 	h1 {
 	  font-size: 36px;
@@ -327,15 +264,22 @@ li.dropdown-header > span.menu-text {
 	  border-bottom-width: 4px;
 	  margin-bottom: 10%;
 	}
+	
 	h2 {
 	  margin-top: 3rem;
 	  margin-bottom: 1rem;
 	  font-size: 32px;
 	  border-bottom: 0px;
 	}
+	
 	h3 { margin-top: 1.5em; font-size: 1.2rem; }
+	
 	h4 { margin-top: 1.5em; font-size: 1.1rem; }
-	h5 { margin-top: 1.5em; font-size: 1rem; }
+	
+	h5 { 
+	  margin-top: 1.5em; 
+	  font-size: 1rem; 
+	}
 
 	h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5 {
 	  line-height: 120%;
@@ -357,7 +301,6 @@ li.dropdown-header > span.menu-text {
 	  margin-inline-start: 0px;
 	  margin-inline-end: 0px;
 	}
-
 
 	.quarto-section-identifier {
 	  color: #070707;
@@ -405,11 +348,11 @@ li.dropdown-header > span.menu-text {
 	  margin-right: 2%;
 	}
 
-
 	.img-fluid {
 	  width: 100%;
 	  height: 100%;
 	}
+	
 	.contentimg {
 	  border-style:solid;
 	  border-color:#007562;
@@ -419,7 +362,6 @@ li.dropdown-header > span.menu-text {
 	  border-radius:2%;
 	  box-shadow:0 0 0 0 rgba(0,0,0,.06),0 2px 5px 0 rgba(0,0,0,.06),0 10px 10px 0 rgba(0,0,0,.05),0 22px 13px 0 rgba(0,0,0,.03),0 39px 16px 0 rgba(0,0,0,.01),0 61px 17px 0 rgba(0,0,0,0)
 	}
-
 }
 
 /* ------------------------------------------------------ */
