Fix some display bugs + dark mode

--- a/inst/assets/book.scss
+++ b/inst/assets/book.scss
@@ -48,15 +48,14 @@ span.navbar-title {
   color: white;
 }
 
-/* CSS pour ajuster la taille du logo de manière plus précise */
 .navbar-brand-container {
     display: flex;
     align-items: center;
 }
 
 .navbar-logo {
-    max-height: 70px; /* Définir une hauteur maximale pour le logo */
-    width: auto; /* Largeur automatique pour maintenir les proportions */
+    max-height: 70px; 
+    width: auto; 
 }
 
 .navbar-nav {
@@ -168,6 +167,68 @@ li.dropdown-header > span.menu-text {
   -webkit-justify-content:flex-start;
 }
 
+.quarto-page-breadcrumbs.quarto-title-breadcrumbs.d-none.d-lg-block {
+  display: none !important;
+}
+
+.quarto-dark {
+
+	#quarto-sidebar {
+	  background-color: #222;
+	}
+	p {
+	  /* color: #070707; */
+	  color: #b5b5b5;
+	}
+	.sidebar.sidebar-navigation:not(.rollup) {
+	  /* border-right: 1px solid #434343 !important; */
+	  border-right: 1px solid #222 !important;
+	}
+	strong {
+	  color: #e1e1e1;
+	}
+	a {
+	  color:#037da1;
+	}
+	h1, h2, h3, h4 {
+	  color:#fff;
+	}
+	.navbar-logo {
+      max-height: 70px; 
+      width: auto; 
+	}
+	.navbar {
+	  padding-top:.5rem;
+	  padding-bottom:.5rem;
+	}
+	#overview > h1:nth-child(1) {
+	  margin-top: 0px;
+	}
+	#quarto-header {
+	  background: linear-gradient(139deg, rgba(0,135,175,1) 33%, rgba(0,0,0,1) 100%);
+	  background-size: flex;
+	  background-repeat: no-repeat;
+	}
+	.navbar-brand-container {
+	  margin-right: 0px;
+	}
+	nav .nav-item.compact .nav-link {
+	  padding-left:.5rem;
+	  padding-right:.5rem;
+	  font-size:1.4rem
+	}
+	span.quarto-section-identifier {
+	  color:#fff;
+	  font-weight:normal;
+	  margin-right:0
+	}
+	div.callout.callout {
+	  border-left-color:#6c757d;
+	  background: #393939;
+	}
+
+
+}
 
 
 /* ------------------------------------------------------ */
