--- a/inst/assets/book.scss
+++ b/inst/assets/book.scss
@@ -361,6 +361,10 @@ li.dropdown-header > span.menu-text {
 	  border-radius:2%;
 	  box-shadow:0 0 0 0 rgba(0,0,0,.06),0 2px 5px 0 rgba(0,0,0,.06),0 10px 10px 0 rgba(0,0,0,.05),0 22px 13px 0 rgba(0,0,0,.03),0 39px 16px 0 rgba(0,0,0,.01),0 61px 17px 0 rgba(0,0,0,0)
 	}
+	#banner{
+	  width: 95%;
+	  height: auto;
+	}
 }
 
 /* ------------------------------------------------------ */
