--- a/inst/assets/book.scss
+++ b/inst/assets/book.scss
@@ -176,53 +176,64 @@ li.dropdown-header > span.menu-text {
 	#quarto-sidebar {
 	  background-color: #222;
 	}
+	
 	p {
 	  color: #b5b5b5;
 	}
+	
 	.sidebar.sidebar-navigation:not(.rollup) {
 	  color: #b5b5b5;
-	}
-	.sidebar.sidebar-navigation:not(.rollup) {
 	  border-right: 1px solid #222 !important;
 	}
+	
 	strong {
 	  color: #e1e1e1;
 	}
+	
 	a {
 	  color:#037da1;
 	}
+	
 	h1, h2, h3, h4 {
 	  color:#fff;
 	}
+	
 	.navbar-logo {
       max-height: 70px; 
       width: auto; 
 	}
+	
 	.navbar {
 	  padding-top:.5rem;
 	  padding-bottom:.5rem;
 	}
+	
 	#overview > h1:nth-child(1) {
 	  margin-top: 0px;
 	}
+	
 	#quarto-header {
 	  background: linear-gradient(139deg, rgba(0,135,175,1) 33%, rgba(0,0,0,1) 100%);
 	  background-size: flex;
 	  background-repeat: no-repeat;
 	}
+	
 	.navbar-brand-container {
 	  margin-right: 0px;
 	}
+	
 	nav .nav-item.compact .nav-link {
 	  padding-left:.5rem;
 	  padding-right:.5rem;
 	  font-size:1.4rem
 	}
+	
 	span.quarto-section-identifier {
 	  color:#fff;
 	  font-weight:normal;
 	  margin-right:0
 	}
+	
 	div.callout.callout {
 	  border-left-color:#6c757d;
 	  background: #393939;
@@ -233,18 +244,6 @@ li.dropdown-header > span.menu-text {
 /* --------------- Introductory workflow ---------------- */
 
 #workflow {
-
-	.content{
-	  margin-left: 4rem;
-	  margin-right: -4rem;
-	}
-
-	.quarto-other-links{
-	  font-size: 16px;
-	  right: 0.2rem;
-	  top: 0.1rem;
-	  margin-top: -3%;
-	}
 
 	.datatables{
 	  overflow-y: hidden;
@@ -301,12 +300,6 @@ li.dropdown-header > span.menu-text {
 	  margin-inline-end: 0px;
 	}
 
-	.quarto-section-identifier {
-	  color: #070707;
-	  font-weight: normal;
-	  margin-right : 10rem
-	}
-
 	ul li::marker {
 	  color: #3792ad; 
 	}
@@ -320,10 +313,6 @@ li.dropdown-header > span.menu-text {
 	  margin: 20px auto;
 	}
 
-	p code{
-	  font-weight: bold;
-	  background-color: #ececec;
-	}
 	// Images markup //
 
 	.contentimg{
@@ -360,6 +349,15 @@ li.dropdown-header > span.menu-text {
 	  margin-right:auto;
 	  border-radius:2%;
 	  box-shadow:0 0 0 0 rgba(0,0,0,.06),0 2px 5px 0 rgba(0,0,0,.06),0 10px 10px 0 rgba(0,0,0,.05),0 22px 13px 0 rgba(0,0,0,.03),0 39px 16px 0 rgba(0,0,0,.01),0 61px 17px 0 rgba(0,0,0,0)
+	}
+	
+	#translate > p:nth-child(1) {
+	  display: block;
+	  text-align: center;
+	}
+	
+	#translate > p:nth-child(1) > a:nth-child(1) {
+	  padding-right: 2em;
 	}
 }
 
