--- a/inst/assets/book.scss
+++ b/inst/assets/book.scss
@@ -14,28 +14,28 @@ $body-color: #070707 !default;
 // Add any custom css styling here... 
 
 span.navbar-title {
-  font-size: 1.5em;
-  text-align: center;
+  font-size: 1.5em; // Increase font size for navbar title
+  text-align: center; // Center align the text
 }
 
 .quarto-title > h1.title {
-    display: none;
+    display: none; // Hide main title in .quarto-title
 }
 
 .mt-2.flex-shrink-0.align-items-center {
-        display: none; 
+        display: none; // Hide elements with this class
 }
 
 #title-block-header {
-        display: none; 
+        display: none; // Hide the title block header
 }
 	
 #refs {
-        display: none; 
+        display: none; // Hide the references section
 }
 
 #quarto-header {
-  background: linear-gradient(139deg, rgba(0,135,175,1) 33%, rgba(255,255,255,1) 100%);
+  background: linear-gradient(139deg, rgba(0,135,175,1) 33%, rgba(255,255,255,1) 100%); // Set header background gradient blue to white
   background-size: flex;
   background-repeat: no-repeat;
 }
@@ -45,52 +45,51 @@ span.navbar-title {
 #quarto-header .bi.bi-git,
 #quarto-header .bi.bi-twitter,
 #quarto-header a.nav-link{
-  color: white;
+  color: white; // Set text color to white for these elements
 }
 
 .navbar-brand-container {
     display: flex;
-    align-items: center;
+    align-items: center; // Align items in center for flex container
 }
 
 .navbar-logo {
-    max-height: 70px; 
+    max-height: 70px; // Set max height for navbar logo
     width: auto; 
 }
 
 .navbar-nav {
   display:flex;
   display:-webkit-flex;
-  flex-direction:column;
-  -webkit-flex-direction:column;
-  padding-left:0;
-  margin-bottom:0;
-  list-style:none;
-  font-size: 1.4em;
+  flex-direction:column; // Set flex direction to column for navbar
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none; // Remove list styling
+  font-size: 1.4em; // Increase font size
 }
 
 nav .nav-item.compact .nav-link {
   padding-left:.5rem;
   padding-right:.5rem;
-  font-size:1.4rem
+  font-size:1.4rem; // Adjust padding and font size for compact nav items
 }
 
 .navbar-brand-container {
   margin-right: 0px;
-  margin-left: 0px;
+  margin-left: 0px // Remove margins for navbar brand container
 }
 
 #nav-menu-bi-git {
   padding-left: 0px;
-  padding-right: 5px;
+  padding-right: 5px; // Adjust padding for menu item
 }
 
 #quarto-header a.nav-link.dropdown-toggle .menu-text {
-  display: none;
+  display: none; // Hide dropdown menu text
 }
 
 .aa-DetachedSearchButtonIcon svg {
-  fill: white;
+  fill: white; // Set icon fill color to white
 }
 
 .mt-2.flex-shrink-0.align-items-center {
@@ -99,26 +98,26 @@ nav .nav-item.compact .nav-link {
 
 .quarto-title>h1.title,
 .quarto-title>.title.h1 {
-  display:block;
+  display:block; // Display title elements
 }
 
 main>#title-block-header {
   display:block;
   text-align: center; 
   background-color: #6c757d8f; 
-  background-border: #0087af;
-  color: #fff;
-  padding: 20px; 
+  background-border: #0087af; // Set background color
+  color: #fff; // Set text color to white
+  padding: 20px; // Set padding for the header
   border-bottom-style: none;
   padding-top: 10px;
   padding-bottom: 10px;
   margin-top: -10px;
   margin-bottom: 0px;
-  font-family: "Atkinson Hyperlegible", sans-serif;
+  font-family: "Atkinson Hyperlegible", sans-serif; // Set font
 }
 
 main>#title-block-header .title {
-  border-bottom: none; 
+  border-bottom: none; // Remove bottom border for title
 }
 
 main>header#title-block-header {
@@ -134,22 +133,23 @@ span.quarto-section-identifier {
 }
 
 .title {
-  padding-top: 0px;
+  padding-top: 0px; // Remove padding for title
 }
 
 h2.anchored {
   margin-top: 3rem;
   margin-bottom: 1rem;
   font-size: 28px;
-  border-color: #0087af ;
-  border-bottom-style: solid;
-  border-bottom-width: 4px;
+  border-color: #0087af ; // Set border color and style
+  border-bottom-style: solid; 
+  border-bottom-width: 4px; 
 }
 
 li.dropdown-header > span.menu-text {
   color: black; 
 }
 
+// Set flex properties for navbar containers
 .navbar>.container-xxl,
 .navbar>.container-xl,
 .navbar>.container-lg,
@@ -168,52 +168,54 @@ li.dropdown-header > span.menu-text {
 }
 
 .quarto-page-breadcrumbs.quarto-title-breadcrumbs.d-none.d-lg-block {
-  display: none !important;
+  display: none !important; // Hide breadcrumbs on large screens
 }
 
+
+// This format is applied whenever you press the dark mode button
 .quarto-dark {
 
 	#quarto-sidebar {
-	  background-color: #222;
+	  background-color: #222; // Dark sidebar background
 	}
 	
 	p {
-	  color: #b5b5b5;
+	  color: #b5b5b5; // Dark mode paragraph text color
 	}
 	
 	.sidebar.sidebar-navigation:not(.rollup) {
 	  color: #b5b5b5;
-	  border-right: 1px solid #222 !important;
+	  border-right: 1px solid #222 !important; // Dark mode sidebar border
 	}
 	
 	strong {
-	  color: #e1e1e1;
+	  color: #e1e1e1; // Strong tag text color in dark mode
 	}
 	
 	a {
-	  color:#037da1;
+	  color:#037da1; // Link color in dark mode
 	}
 	
 	h1, h2, h3, h4 {
-	  color:#fff;
+	  color:#fff; // Heading color in dark mode
 	}
 	
 	.navbar-logo {
-      max-height: 70px; 
-      width: auto; 
+	  max-height: 70px; 
+	  width: auto; // Logo dimensions in dark mode
 	}
 	
 	.navbar {
 	  padding-top:.5rem;
-	  padding-bottom:.5rem;
+	  padding-bottom:.5rem; // Navbar padding in dark mode
 	}
 	
 	#overview > h1:nth-child(1) {
-	  margin-top: 0px;
+	  margin-top: 0px; // Remove margin for first heading in overview
 	}
 	
 	#quarto-header {
-	  background: linear-gradient(139deg, rgba(0,135,175,1) 33%, rgba(0,0,0,1) 100%);
+	  background: linear-gradient(139deg, rgba(0,135,175,1) 33%, rgba(0,0,0,1) 100%); // Dark mode header background blue to black
 	  background-size: flex;
 	  background-repeat: no-repeat;
 	}
@@ -225,130 +227,141 @@ li.dropdown-header > span.menu-text {
 	nav .nav-item.compact .nav-link {
 	  padding-left:.5rem;
 	  padding-right:.5rem;
-	  font-size:1.4rem
+	  font-size:1.4rem; // Compact nav item styling in dark mode
 	}
 	
 	span.quarto-section-identifier {
 	  color:#fff;
 	  font-weight:normal;
-	  margin-right:0
+	  margin-right:0; // Section identifier color in dark mode
 	}
 	
 	div.callout.callout {
 	  border-left-color:#6c757d;
-	  background: #393939;
+	  background: #393939; // Callout background in dark mode
 	}
 
 }
 
 /* --------------- Introductory workflow ---------------- */
 
+// This section is applied to all the content which is in a <div id="workflow"> (content) </div> tag
+
 #workflow {
 
-	.datatables{
-	  overflow-y: hidden;
-	}
+  .datatables {
+    overflow-y: hidden; // Hide vertical overflow for datatables
+  }
 
-	strong {
-	  color : #007562
-	}
+  strong {
+    color: #007562; // Strong text color
+  }
 
-	h1 {
-	  font-size: 36px;
-	  color: #070707;
-	  font-weight: 700;
-	  border-image: linear-gradient(to right, #007562, #007562) 1;
-	  border-bottom-style: solid;
-	  border-bottom-width: 4px;
-	  margin-bottom: 10%;
-	}
-	
-	h2 {
-	  margin-top: 3rem;
-	  margin-bottom: 1rem;
-	  font-size: 32px;
-	  border-bottom: 0px;
-	}
-	
-	h3 { margin-top: 1.5em; font-size: 1.2rem; }
-	
-	h4 { margin-top: 1.5em; font-size: 1.1rem; }
-	
-	h5 { 
-	  margin-top: 1.5em; 
-	  font-size: 1rem; 
-	}
+  h1 {
+    font-size: 36px;
+    color: #070707; // Header 1 font size, color, and font weight
+    font-weight: 700;
+    border-image: linear-gradient(to right, #007562, #007562); // Border color
+    border-bottom: solid 4px #007562; // Border bottom styling
+    margin-bottom: 10%; 
+  }
 
-	h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5 {
-	  line-height: 120%;
-	  margin: 0 0 1.5rem;
-	  width: fit-content;
-	  padding-top: 0.5rem;
-	  color: #070707;
-	}
+  h2 {
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+    font-size: 32px;
+    border-bottom: none; // No border
+  }
 
-	p {
-	  margin: 1rem 1rem 1rem 10rem; 
-	  font-size: 1rem;
-	  color: #070707;
-	  line-height: 130%;
-	  text-align: justify; 
-	  display: block;
-	  margin-block-start: 1em;
-	  margin-block-end: 1em;
-	  margin-inline-start: 0px;
-	  margin-inline-end: 0px;
-	}
+  h3 {
+    margin-top: 1.5em;
+    font-size: 1.2rem;
+  }
 
-	ul li::marker {
-	  color: #3792ad; 
-	}
+  h4 {
+    margin-top: 1.5em;
+    font-size: 1.1rem;
+  }
 
-	hr {
-	  color: #3792ad;
-	  width: 50%;
-	  height: 5px;
-	  background-color: #3792ad;
-	  border: none;
-	  margin: 20px auto;
-	}
+  h5 {
+    margin-top: 1.5em;
+    font-size: 1rem;
+  }
 
-	// Images markup //
+  h1,
+  .h1,
+  h2,
+  .h2,
+  h3,
+  .h3,
+  h4,
+  .h4,
+  h5,
+  .h5 {
+    line-height: 120%;
+    margin: 0 0 1.5rem;
+    width: fit-content;
+    padding-top: 0.5rem;
+    color: #070707;
+  }
 
-	.contentimg {
-	  width:80%;
-	  height: auto;
-	  border-style: solid;
-	  border-color: #3792ad ;
-	  display: block;
-	  margin-left: auto;
-	  margin-right: auto;
-	  border-radius: 2%;
-	  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 10px 10px 0 rgba(0, 0, 0, 0.05), 0 22px 13px 0 rgba(0, 0, 0, 0.03), 0 39px 16px 0 rgba(0, 0, 0, 0.01), 0 61px 17px 0 rgba(0, 0, 0, 0);
-	}
+  p {
+    margin: 1rem 1rem 1rem 10rem;
+    font-size: 1rem;
+    color: #070707;
+    line-height: 130%;
+    text-align: justify;
+  }
 
-	.profilepic {
-	  border-style: solid;
-	  border-color: #007562;
-	  border-radius: 50%;
-	  width: 64px !important;
-	  height: 64px !important;
-	  margin-right: 2%;
-	}
+  ul li::marker {
+    color: #3792ad;
+  }
 
-	.img-fluid {
-	  width: 100%;
-	  height: 100%;
-	}
-	
-	#translate > p:nth-child(1) {
-	  display: block;
-	  text-align: center;
-	}
-	
-	#translate > p:nth-child(1) > a:nth-child(1) {
-	  padding-right: 2em;
-	}
+  // Create a horizontal bar to separate each section
+  hr {
+    width: 50%;
+    height: 5px;
+    background-color: #3792ad;
+    border: none;
+    margin: 20px auto;
+  }
+
+  // Styling for content images
+  .contentimg {
+    width: 80%;
+    height: auto;
+    border-style: solid;
+    border-color: #3792ad;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 2%; // Slight border rounding 
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 10px 10px 0 rgba(0, 0, 0, 0.05), 0 22px 13px 0 rgba(0, 0, 0, 0.03), 0 39px 16px 0 rgba(0, 0, 0, 0.01), 0 61px 17px 0 rgba(0, 0, 0, 0); // Multiple shadow effects for depth
+  }
+
+  .profilepic {
+    border-style: solid;
+    border-color: #007562; // Border color 
+    border-radius: 50%; // Circular shape 
+    width: 64px !important; // Fixed width 
+    height: 64px !important; // Fixed height 
+    margin-right: 2%;
+  }
+
+  .img-fluid {
+    width: 100%;
+    height: 100%;
+  }
+
+  // Style to center the translate button 
+  #translate > p:nth-child(1) {
+    display: block;
+    text-align: center;
+  }
+
+  #translate > p:nth-child(1) > a:nth-child(1) {
+    padding-right: 2em;
+  }
 }
 /* ------------------------------------------------------ */
 
